syntax = "proto3";

option go_package = "api/project-service/v1";

package project.v1;

service ProjectService {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
}

message CreateProjectRequest {
  string title = 1;
  string user_id = 2;
}

message CreateProjectResponse {
  string id = 1;
  string title = 2;
  string last_image = 3;
  bool is_personal = 4;
}